--- a/auth/src/main/res/values/strings.xml
+++ b/auth/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
 <resources>
     <string name="welcome">Welcome!</string>
     <string name="please_login">Please Login or Register</string>
+    <string name="login_screen_email">Email</string>
+    <string name="login_screen_password">Password</string>
+    <string name="login_screen_login">Login</string>
+    <string name="login_screen_register">Register</string>
+    <string name="login_screen_forget_password">Forget Password?</string>
+    <string name="login_screen_invalid_email">Invalid email</string>
+    <string name="login_screen_invalid_password">Invalid password</string>
 </resources>
